<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingVm"
            type="com.kobbi.weather.info.presenter.viewmodel.SettingViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_default_setting"
            android:textSize="24dp"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/text_agree_my_location"
                android:textSize="17dp"
                tools:ignore="SpUsage" />

            <Switch
                android:id="@+id/sw_use_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="@={settingVm.useLocation}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/text_agree_notification"
                android:textSize="17dp"
                tools:ignore="SpUsage" />

            <Switch
                android:id="@+id/sw_use_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="@={settingVm.useNotify}" />
        </LinearLayout>

    </LinearLayout>
</layout>