<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="jusoVm"
            type="com.kobbi.weather.info.presenter.viewmodel.JusoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_close"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> jusoVm.clickClose()}"
            android:padding="10dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_search_place"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


            <TextView
                android:id="@+id/tv_dialog_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
                app:setJusoText="@{jusoVm.jusoTitle}"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_dialog_area_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/guide_area_select"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_area"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_dialog_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{jusoVm.address}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_area_info" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dialog_area_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_address"
                app:setJuso="@{jusoVm.jusoList}"
                app:setPosition="@{jusoVm}"
                app:spanCount="3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_dialog_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:clickable="@{jusoVm.depth > 2}"
            android:enabled="@{jusoVm.depth > 2}"
            android:onClick="@{() -> jusoVm.clickEnd()}"
            android:text="@string/guide_btn_ok"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_dialog_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:clickable="@{jusoVm.depth > 1}"
            android:enabled="@{jusoVm.depth > 1}"
            android:onClick="@{() -> jusoVm.clickPrev()}"
            android:text="@string/guide_btn_prev"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>